--- a/css/nav.css
+++ b/css/nav.css
@@ -22,6 +22,10 @@
     display: inline-block;
     padding-top:0.2em;
 }
+.sml {
+    font-size: 0.5em;
+    display:none;
+}
 
 .sym {
     height: 50px;
