--- a/css/footer.css
+++ b/css/footer.css
@@ -56,8 +56,9 @@ line-height: 1.375;
 
 .footer .bottom {
   text-align: center;
-  font-size: 13px;
+  font-size: 0.72em;
   width: 100%;
+  padding-top: 1em;
 }
 
 .footer .bottom a {
