--- a/css/home-grid.css
+++ b/css/home-grid.css
@@ -30,15 +30,13 @@
     padding: 10px;
 }
 
-.post-listing h3 {
-    height: 5em;
-}
 .feature-post h3 {
     /* height: 4em; */
 }
 
 .feature-post, .post-listing {
-    width: 100%
+    width: 100%;
+    height: 100%;
 }
 .feature-post h3 {
     letter-spacing: 0.025em;
