--- a/css/prism-vscode.css
+++ b/css/prism-vscode.css
@@ -30,6 +30,7 @@ pre[class*="language-"] {
   margin: .5em 0;
   overflow: auto;
   border-radius: 0.3em;
+  padding-top: 1.5em;
 }
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
