--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,6 @@ body {
 }
 
 
-a:hover,
-a:focus {
-    text-decoration: none;
-}
-
-
 .header-wrapper {
     /* padding: 0 200px; */
     padding-top: 20px;
@@ -154,7 +148,7 @@ a:focus {
 }
 
 pre[class*="language-"] {
-    border:3px solid #ccc;
+    border:none;
     border-radius: 0;
     box-shadow: none;
 }
@@ -163,6 +157,11 @@ blockquote {
     padding: 1.2rem;
     background: #eee;
     border-left: 8px solid #ccc;
+}
+pre {
+    position: relative;
+    line-height: 28px;
+    min-width: 100%;
 }
 /* .header-content .overlay {
     background: url(/img/jscode2.png);
