adde classes for code types on header

--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,12 @@ pre {
     background-repeat: no-repeat;
     background-size: cover; 
 } */
+/* .header-content {
+    background-image: url(/img/jscode.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.header-content .overlay {
+    opacity: 0.8;
+}
+ */
