--- a/css/color.css
+++ b/css/color.css
@@ -5,8 +5,8 @@ p {
 }
 a:hover,
 a:focus {
-    text-decoration: none;
-    color: #4a4a4a;
+  text-decoration: none;
+  color: #4a4a4a;
 }
 .page-title h1 {
   color: #fff;
@@ -127,7 +127,6 @@ a:focus {
 .contact-details li {
   color: #fff;
 }
-
 pre[data-code]::before {
   font-size: 1rem;
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
@@ -140,13 +139,26 @@ pre[data-code]::before {
   background: #999;
   padding: 0.5rem 1rem;
 }
-pre[data-code="VBA"]::before {
+.post-listing {
+  background: #74b9ff;
+}
+.post-listing a,
+.post-listing .meta {
+  color: #fff;
+}
+pre[data-code="VBA"]::before,
+.vba,
+.vb {
   background: #07a;
 }
-pre[data-code="JSON"]::before {
+pre[data-code="JSON"]::before,
+.json {
   background: #fab1a0;
 }
-pre[data-code="Node.js"]::before {
+pre[data-code="Node.js"]::before,
+.nodejs {
   background: #026e00;
 }
-
+p code {
+  background: #eee;
+}
