--- a/css/style.css
+++ b/css/style.css
@@ -185,3 +185,13 @@ pre {
      text-align: center;
      margin-bottom: 1em;
  }
+ .short-version {
+     margin-top: 1em;
+ }
+ .short-version ul {
+     list-style: none;
+     padding-left: 0;
+ }
+ .short-version-btn {
+     float: right;
+ }
