--- a/css/nav.css
+++ b/css/nav.css
@@ -20,7 +20,12 @@
 .navbar-brand .item {
     position: relative;
     display: inline-block;
-    padding-top:0.2em;
+}
+.navbar-brand .item img {
+    height: 47px;
+}
+.navbar-brand .brand, .navbar-brand .brand2 {
+    display: none;
 }
 .sml {
     font-size: 0.5em;
@@ -28,8 +33,6 @@
 }
 
 .sym {
-    height: 50px;
-    width: 50px;
     margin-right:-0.2em;
 }
 .sym img {
